--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -45,11 +45,11 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --card: oklch(1 0 0);
+  --radius: .5rem;
+  --card: oklch(0.5 0 264);
   --card-foreground: oklch(0.13 0.028 261.692);
   --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.13 0.028 261.692);
+  --popover-foreground: oklch(0.13 0.028 161.692);
   --primary: oklch(0.21 0.034 264.665);
   --primary-foreground: oklch(0.985 0.002 247.839);
   --secondary: oklch(0.967 0.003 264.542);
